--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🔥 Cuci Gudang - Sepeda Mulai dari Rp 200Rb!</title>
+  <title>🔥 Cuci Gudang SEPEDA! 🔥</title>
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16923029164"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'AW-16923029164');
+  </script>
   <style>
     /* General Reset */
     body {
@@ -272,7 +280,9 @@
     <div class="countdown">
       ⏳ Promo berakhir dalam: <span id="timer">00:00:00</span>
     </div>
-    <a href="https://wa.me/08117181122" class="cta-button" style="margin-top: 10px;">BELI SEKARANG SEBELUM HARGA NORMAL LAGI! 🏃‍♂️</a>
+    <a href="thanks.html" class="cta-button" style="margin-top: 10px;">
+      BELI SEKARANG SEBELUM HARGA NORMAL LAGI! 🏃‍♂️
+    </a>
   </section>
 
   <!-- Testimonials Section -->
@@ -306,20 +316,24 @@
   <section id="map">
     <h2>Kunjungi Toko Kami</h2>
     <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.6865665607374!2d101.40120551090887!3d0.4656330637770867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d5a973c6a12f35%3A0x22b18beaa07be703!2sFIRMAN%208%20BICYCLE%20SHOP!5e0!3m2!1sen!2sid!4v1744724994496!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <a href="maps-thanks.html">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.6865665607374!2d101.40120551090887!3d0.4656330637770867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d5a973c6a12f35%3A0x22b18beaa07be703!2sFIRMAN%208%20BICYCLE%20SHOP!5e0!3m2!1sen!2sid!4v1744724994496!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </a>
     </div>
   </section>
 
   <!-- Call to Action -->
   <section id="cta">
-    <a href="https://wa.me/08117181122" class="cta-button">Hubungi Kami di WhatsApp Sekarang!</a>
+    <a href="thanks.html" class="cta-button">
+      Hubungi Kami di WhatsApp Sekarang!
+    </a>
   </section>
 
   <!-- Footer Section -->
   <footer>
     <p>📍 Firman 8 | 📞 WhatsApp: <a href="https://wa.me/08117181122">0811-7181-122</a></p>
     <p>📸 Instagram: <a href="https://instagram.com/tokosepedafirman" target="_blank">@tokosepedafirman</a></p>
-    <p>📍 Lokasi: <a href="https://maps.app.goo.gl/1u4vZkWB5zUmKAji9" target="_blank">Google Maps</a></p>
+    <p>📍 Lokasi: <a href="map-thanks.html" target="_blank">Google Maps</a></p>
   </footer>
 
   <script>
