--- a/map-thanks.html
+++ b/map-thanks.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menuju Lokasi - Firman 8</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <!-- Add your existing Google Ads tag -->
+   <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16923029164"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -13,7 +13,8 @@
         gtag('js', new Date());
         gtag('config', 'AW-16923029164');
     </script>
-    <!-- Event snippet for Get directions conversion page -->
+
+<!-- Event snippet for Get directions conversion page -->
     <script>
         gtag('event', 'conversion', {'send_to': 'AW-16923029164/ISVHCI2E_rgaEKzdw4U_'});
     </script>
