--- a/map-thanks.html
+++ b/map-thanks.html
@@ -6,6 +6,7 @@
     <title>Menuju Lokasi - Firman 8</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
    <!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16923029164"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -14,7 +15,7 @@
         gtag('config', 'AW-16923029164');
     </script>
 
-<!-- Event snippet for Get directions conversion page -->
+    <!-- Event snippet for Get directions conversion page -->
     <script>
         gtag('event', 'conversion', {'send_to': 'AW-16923029164/ISVHCI2E_rgaEKzdw4U_'});
     </script>
