--- a/index.html
+++ b/index.html
@@ -314,13 +314,15 @@
   </section>
 
   <!-- Map Section -->
+  <!-- Map Section -->
   <section id="map">
     <h2>Kunjungi Toko Kami</h2>
     <div class="map">
-      <a href="map-thanks.html">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.6865665607374!2d101.40120551090887!3d0.4656330637770867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d5a973c6a12f35%3A0x22b18beaa07be703!2sFIRMAN%208%20BICYCLE%20SHOP!5e0!3m2!1sen!2sid!4v1744724994496!5m2!1sen!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </a>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.6865665607374!2d101.40120551090887!3d0.4656330637770867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d5a973c6a12f35%3A0x22b18beaa07be703!2sFIRMAN%208%20BICYCLE%20SHOP!5e0!3m2!1sid!2sid!4v1744724994496!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+    <a href="map-thanks.html" class="cta-button" style="margin-top: 20px;">
+        PETUNJUK ARAH KE TOKO 📍
+    </a>
   </section>
 
   <!-- Call to Action -->
