clean up buttons
make it neat

--- a/index.html
+++ b/index.html
@@ -199,6 +199,19 @@
       background: #e64a19;
     }
 
+    #map {
+    padding-bottom: 20px;
+    }
+
+    #cta {
+        padding-top: 0;
+        padding-bottom: 40px;
+    }
+
+    .cta-button {
+        margin: 10px auto;  /* Reduced from 20px to 10px */
+    }
+    
     /* Countdown Timer */
     .countdown {
       text-align: center;
@@ -320,15 +333,15 @@
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.6865665607374!2d101.40120551090887!3d0.4656330637770867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31d5a973c6a12f35%3A0x22b18beaa07be703!2sFIRMAN%208%20BICYCLE%20SHOP!5e0!3m2!1sid!2sid!4v1744724994496!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <a href="map-thanks.html" class="cta-button" style="margin-top: 20px;">
-        PETUNJUK ARAH KE TOKO 📍
-    </a>
   </section>
 
-  <!-- Call to Action -->
-  <section id="cta">
-    <a href="thanks.html" class="cta-button">
-      Hubungi Kami di WhatsApp Sekarang!
+  <!-- Call to Action Buttons Section -->
+  <section id="cta" style="padding-top: 0;">
+    <a href="map-thanks.html" class="cta-button">
+        PETUNJUK ARAH KE TOKO 📍
+    </a>
+    <a href="thanks.html" class="cta-button" style="margin-top: 15px;">
+        Hubungi Kami di WhatsApp Sekarang!
     </a>
   </section>
 
