--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     .cta-button {
         margin: 10px auto;  /* Reduced from 20px to 10px */
     }
-    
+
     /* Countdown Timer */
     .countdown {
       text-align: center;
@@ -285,7 +285,7 @@
   <section id="promo">
     <div class="promo">
       🎁 <span>PROMO SPESIAL!</span><br>
-      Ambil selfie di depan toko kami dan dapatkan <span>HELM GRATIS!</span> 🪖
+      Ambil selfie di toko Yakin, tunjukkan ke kami dan dapatkan <span>HELM GRATIS!</span> 🪖
     </div>
   </section>
 
