--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     gtag('js', new Date());
     gtag('config', 'AW-16923029164');
   </script>
-  <link rel="stylesheet" href="styles.css?v=<?php echo time(); ?>">
+  <link rel="stylesheet" href="styles.css?v=1">
 </head>
 <body>
   <!-- Header Section -->
@@ -144,9 +144,9 @@
   </div>
 
   <!-- Update your audio element -->
-  <script src="script.js?v=<?php echo time(); ?>"></script>
+  <script src="script.js?v=1"></script>
   <audio id="notificationSound" preload="auto">
-      <source src="notification.mp3?v=<?php echo time(); ?>" type="audio/mpeg">
+    <source src="notification.mp3" type="audio/mpeg">
   </audio>
 
 </body>
