--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@
 
   <!-- Update your audio element -->
   <script src="script.js?v=1"></script>
-  <audio id="notificationSound" preload="auto">
-    <source src="notification.mp3" type="audio/mpeg">
+  <audio id="notificationSound" preload="auto" playsinline>
+    <source src="notification.mp3?v=1" type="audio/mpeg">
+    <source src="notification.wav?v=1" type="audio/wav">
   </audio>
 
 </body>
