--- a/index.html
+++ b/index.html
@@ -77,10 +77,13 @@
   <!-- Countdown Timer -->
   <section id="countdown">
     <div class="countdown">
-      ⏳ Promo berakhir dalam: <span id="timer">00:00:00</span>
+      <div style="font-size: 1.2rem; font-weight: 600; color: #e64a19;">⚠️ PERHATIAN: PROMO TERBATAS!</div>
+      <div style="font-size: 1.1rem; margin: 5px 0;">⏳ Promo Berakhir Dalam:</div>
+      <span id="timer">00:00:00</span>
+      <div style="font-size: 0.9rem; color: #e64a19; margin-top: 5px;">Setelah waktu habis, harga kembali normal</div>
     </div>
     <a href="thanks.html" class="cta-button" style="margin-top: 10px;">
-      BELI SEKARANG SEBELUM HARGA NORMAL LAGI! 🏃‍♂️
+      🔥 AMBIL PROMO SEKARANG JUGA! 🏃‍♂️
     </a>
   </section>
 
