--- a/index.html
+++ b/index.html
@@ -146,12 +146,13 @@
     </div>
   </div>
 
-  <!-- Update your audio element -->
-  <script src="script.js?v=1"></script>
-  <audio id="notificationSound" preload="auto" playsinline>
-    <source src="notification.mp3?v=1" type="audio/mpeg">
-    <source src="notification.wav?v=1" type="audio/wav">
+  <!-- Audio element for notifications -->
+  <audio id="notificationSound">
+    <source src="notification.mp3" type="audio/mpeg">
   </audio>
+
+  <script src="script.js?v=2"></script>
+
 
 </body>
 </html>
