--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
   </div>
 
   <!-- Audio element for notifications -->
-  <audio id="notificationSound">
+  <audio id="notificationSound" preload="auto">
     <source src="notification.mp3" type="audio/mpeg">
-  </audio>
+    Your browser does not support the audio element.
+</audio>
 
-  <script src="script.js?v=2"></script>
-
+  <script src="script.js?v=3"></script>
 
 </body>
 </html>
