--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="promo">
     <div class="promo">
       🎁 <span>PROMO SPESIAL!</span><br>
-      Ambil selfie di toko Yakin, tunjukkan ke kami dan dapatkan <span>HELM GRATIS!</span> 🪖
+      DAPATKAN HELM GRATIS SETIAP BELANJA DI ATAS 2JT! 🪖
     </div>
   </section>
 
